[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "reviewboard.settings"
django_debug_mode = false

python_files = ["tests.py", "test_*.py"]
python_classes = ["*Tests"]
python_functions = ["test_*"]
pythonpath = "."
testpaths = ["add_dashboard_column"]

env = [
    "RB_RUNNING_TESTS=1",
    "RBSSH_STORAGE_BACKEND=reviewboard.ssh.storage.FileSSHStorage",
]

addopts = ["--reuse-db"]

required_plugins = [
    "pytest-django",
    "pytest-env",
]

[project]
name = "reviewboard-add_dashboard_column"
version = "1.0.5"
requires-python = ">=3.9"
authors = [
  { name="sijinhui", email="sijinhui@qq.com" },
]
description = "为reviewboard添加自定义的列"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/sijinhui/reviewboard-add_dashboard_column"


[tool.uv]
dev-dependencies = [
    "reviewboard~=7.0.3",
    "setuptools",
    "wheel",
    "djblets~=5.2",
]